<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background_dk"
    tools:context=".Activities.SigInActivity">

    <EditText
        android:id="@+id/etSiginEmail"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/input"
        android:ems="10"
        android:hint="@string/userMail"
        android:autofillHints="@string/userMail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSiginUserName"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <EditText
        android:id="@+id/etSiginUserName"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/input"
        android:ems="10"
        android:hint="@string/userName"
        android:autofillHints="@string/userName"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.173" />

    <Button
        android:id="@+id/btnSiginContinue"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/btn_light_round_shape"
        android:text="@string/btnContinuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSiginPassword"
        app:layout_constraintVertical_bias="0.742" />

    <EditText
        android:id="@+id/etSiginPassword"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/input"
        android:ems="10"
        android:hint="@string/userPassword"
        android:autofillHints="@string/userPassword"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSiginEmail"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>